nullaway_error_4cef4343-9000-4315-b457-80bdb96718d1.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/Environment.java:325: error: [NullAway] dereferenced expression this.miscEntities.get(entity.getRenderType()) is @Nullable
    this.miscEntities.get(entity.getRenderType()).put(entity.getMapId(), entity);
                                                 ^
    (see http://t.uber.com/nullaway )
